--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import "normalize.css";
+@import "@blueprintjs/core/lib/css/blueprint.css";
+@import "@blueprintjs/icons/lib/css/blueprint-icons.css";
+@import "@blueprintjs/popover2/lib/css/blueprint-popover2.css";
+@import "@blueprintjs/select/lib/css/blueprint-select.css";
+
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
