--- a/src/SpotifyPlayer.module.css
+++ b/src/SpotifyPlayer.module.css
@@ -1,3 +1,15 @@
+.wrapper {
+	padding: 1em 0;
+	display: flex;
+	justify-items: center;
+	align-items: center;
+	flex-direction: row;
+}
+
+.progress {
+	padding: 0 0.5em;
+}
+
 .player {
 	opacity: 0;
 	height: 1px;
@@ -6,4 +18,9 @@
 	right: 0;
 	bottom: 0;
 	overflow: hidden;
+}
+
+.spinner {
+	display: inline-block;
+	margin: 0 0.5em;
 }
