--- a/src/Game.module.scss
+++ b/src/Game.module.scss
@@ -8,3 +8,11 @@
 	font-size: 2em;
 	padding: 2em 0;
 }
+
+.formRow {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 25px;
+}
