--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,12 @@
+@use "styles/colors.scss";
+
 @import "normalize.css";
 @import "@blueprintjs/core/lib/css/blueprint.css";
 @import "@blueprintjs/icons/lib/css/blueprint-icons.css";
 @import "@blueprintjs/popover2/lib/css/blueprint-popover2.css";
 @import "@blueprintjs/select/lib/css/blueprint-select.css";
+
+
 
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -26,6 +30,25 @@ html {
 *:before,
 *:after {
 	box-sizing: inherit;
+}
+
+#levelFieldSet {
+	border: none;
+	padding: 0;
+	margin-bottom: 50px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	gap: 5px;
+}
+
+.radio {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 5px;
 }
 
 a {
@@ -57,16 +80,15 @@ button {
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
-	background-color: #f9f9f9;
+	background-color: colors.$primary;
+	color: #FFF;
 	cursor: pointer;
 	transition: border-color 0.25s;
-}
-button:hover {
-	border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-	outline: 4px auto -webkit-focus-ring-color;
+
+	&:hover {
+		background-color: darken(colors.$primary, 5%);
+	}
+
 }
 
 #root {
