--- a/src/SpotifyPlayer.module.scss
+++ b/src/SpotifyPlayer.module.scss
@@ -25,12 +25,7 @@
 	margin: 0 0.5em;
 }
 
-.playContainer {
-	width: 100%;
-	height: 24px;
-	border: 3px solid #E6E6E6;
-	border-radius: 8px;
-}
+
 
 .playButton {
 	padding: 0;
@@ -57,4 +52,38 @@
 	font-size: 16px;
 	font-weight: 700;
 	color: #000000;
+}
+
+.playContainer {
+	width: 100%;
+	height: 24px;
+	border: 3px solid #E6E6E6;
+	border-radius: 8px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.playingSpan {
+	background-color: transparent;
+	width: 9%;
+	padding: 2px 4px;
+	height: 18px;
+	border-radius: 2px;
+}
+
+.playingFilled {
+	background-color: black;
+}
+
+
+.notLastBorder {
+
+	background-color: #E6E6E6;
+	width: 1%;
+	border-radius: 2px;
+	margin: 2px 1px;
+	height: 18px;
+
 }
