--- a/src/SpotifyPlayer.module.scss
+++ b/src/SpotifyPlayer.module.scss
@@ -6,10 +6,6 @@
 	flex-direction: row;
 }
 
-.progress {
-	padding: 0 0.5em;
-}
-
 .player {
 	opacity: 0;
 	height: 1px;
@@ -20,12 +16,45 @@
 	overflow: hidden;
 }
 
+.progressWrapper {
+	position: relative;
+	width: 100%;
+	height: 1em;
+	border: 1px solid lightgrey;
+}
+
+.stopAfterBar,
+.progressBar {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform-origin: top left;
+	transition: transform .1s;
+}
+
+.stopAfterBar {
+	background: lightgrey;
+}
+
+.progressBar {
+	z-index: 1;
+	background: #646cff;
+}
+
+.progressTick {
+	position: absolute;
+	top: 0;
+	width: 1px;
+	background: darkgrey;
+	height: 100%;
+}
+
 .spinner {
 	display: inline-block;
 	margin: 0 0.5em;
 }
-
-
 
 .playButton {
 	padding: 0;
@@ -35,6 +64,7 @@
 	background-color: transparent;
 	background-position: center;
 	background-repeat: no-repeat;
+	background-size: cover;
 
 	transition-duration: 0.15s;
 	transition-property: background-image;
@@ -52,37 +82,4 @@
 	font-size: 16px;
 	font-weight: 700;
 	color: #000000;
-}
-
-.playContainer {
-	width: 100%;
-	height: 24px;
-	border: 3px solid #E6E6E6;
-	border-radius: 8px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	align-items: center;
-}
-
-.playingSpan {
-	background-color: transparent;
-	width: 9.5%;
-	padding: 2px 4px;
-	height: 18px;
-	border-radius: 4px;
-}
-
-.playingFilled {
-	background-color: black;
-}
-
-
-.notLastBorder {
-
-	background-color: #E6E6E6;
-	width: 0.5%;
-	border-radius: 2px;
-	height: 14px;
-
 }
