fix: display times correctly

--- a/src/SpotifyPlayer.module.scss
+++ b/src/SpotifyPlayer.module.scss
@@ -79,7 +79,11 @@
 }
 
 .times {
+	min-width: 40px;
 	font-size: 16px;
 	font-weight: 700;
 	color: #000000;
+	&.right {
+		text-align: right;
+	}
 }
