--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,7 @@
 	font-weight: 400;
 	color: black;
 	background-color: #fff;
-
+	font-size: 24px;
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
