--- a/src/SpotifyPlayer.module.scss
+++ b/src/SpotifyPlayer.module.scss
@@ -105,6 +105,9 @@
 .times {
 	min-width: 40px;
 	font-size: 16px;
+	@media (max-width: 400px) {
+		font-size: 8px;
+	}
 	font-weight: 700;
 	color: #000000;
 	&.right {
