--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,10 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+
+	@media (max-width: 400px) {
+		font-size: 16px;
+	}
 }
 
 html {
@@ -42,6 +46,10 @@ h1 {
 	font-size: 32px;
 	line-height: 1.1;
 	color: #A1A1A1;
+
+	@media (max-width: 400px) {
+		font-size: 24px;
+	}
 }
 
 #root {
