--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,13 +1,13 @@
-.headlines {
+.header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
   h1 {
-    font-size: 32px;
+    font-size: 48px;
     line-height: 1.1;
-    font-weight: normal;
+    font-weight: bold;
     background: linear-gradient(90deg, rgba(105, 81, 255, 0.5) 0%, rgba(0, 133, 255, 0.5) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -33,4 +33,39 @@ select {
     font-weight: bold;
     text-decoration: underline;
     color: #6951FF;
+}
+
+.app {
+    width: 100%;
+  height: 100%;
+  display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+}
+
+.appBody {
+    max-width: 620px;
+    margin: 0 auto;
+    padding: 2em;
+}
+
+.footer {
+    p {
+        font-size: 24px;
+        line-height: 1.5;
+        color: #6951FF;
+        font-weight: 500;
+        text-align: center;
+        margin: 0;
+    }
+    width: 100%;
+  height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 25px;
+    margin-bottom: 10px;
+    margin-right: 25px;
 }
