--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,7 @@
 
 html {
 	box-sizing: border-box;
+	height: 100%;
 }
 *,
 *:before,
@@ -37,23 +38,9 @@ html {
 
 body {
 	margin: 0;
-	display: flex;
-	min-width: 320px;
-	min-height: 100vh;
-}
-
-h1 {
-	font-size: 32px;
-	line-height: 1.1;
-	color: #A1A1A1;
-
-	@media (max-width: 400px) {
-		font-size: 24px;
-	}
+	height: 100%;
 }
 
 #root {
-	max-width: 620px;
-	margin: 0 auto;
-	padding: 2em;
+	height: 100%;
 }
