feat: Adding album image to successfully guessed

--- a/src/Game.module.scss
+++ b/src/Game.module.scss
@@ -71,6 +71,11 @@ button {
 	}
 }
 
+.albumImage {
+	max-width: 250px;
+	max-height: 250px;
+}
+
 .endGame {
 	display: flex;
 	flex-direction: column;
