--- a/src/Game.module.scss
+++ b/src/Game.module.scss
@@ -76,6 +76,15 @@ button {
 	max-height: 250px;
 }
 
+
+.endGameDiv {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 25px;
+}
+
 .endGame {
 	display: flex;
 	flex-direction: column;
