feat: Change number of skips to input field

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,7 @@
 html {
 	box-sizing: border-box;
 	height: 100%;
+	width: 100%;
 }
 *,
 *:before,
@@ -39,8 +40,10 @@ html {
 body {
 	margin: 0;
 	height: 100%;
+	width: 100%;
 }
 
 #root {
 	height: 100%;
+	width: 100%;
 }
