--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -60,12 +60,18 @@ select {
         margin: 0;
     }
     width: 100%;
-  height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
+
     align-items: flex-end;
-    justify-content: flex-end;
+    justify-content: center;
     gap: 25px;
     margin-bottom: 10px;
+  @media(min-width: 748px) {
+    align-items: flex-end;
+    justify-content: flex-end;
     margin-right: 25px;
+  }
+
 }
