--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
-$primary: #FC6471;
-$text: #DDDDDD;
-$secondary: #7D5BA6;
-$accent: #ACFCD9;
-$dark-accent: #55D6BE;
+$primary: #fc6471;
+$text: #dddddd;
+$secondary: #7d5ba6;
+$accent: #acfcd9;
+$dark-accent: #55d6be;
