--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,77 +1,79 @@
 .header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 
-  h1 {
-    font-size: 48px;
-    line-height: 1.1;
-    font-weight: bold;
-    background: linear-gradient(90deg, rgba(105, 81, 255, 0.5) 0%, rgba(0, 133, 255, 0.5) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;
-    text-align: center;
-    margin-bottom: 29px;
-  }
+	h1 {
+		font-size: 48px;
+		line-height: 1.1;
+		font-weight: bold;
+		background: linear-gradient(
+			90deg,
+			rgba(105, 81, 255, 0.5) 0%,
+			rgba(0, 133, 255, 0.5) 100%
+		);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		background-clip: text;
+		text-fill-color: transparent;
+		text-align: center;
+		margin-bottom: 29px;
+	}
 
-  h2 {
-    font-size: 60px;
-    line-height: 1.1;
-    color: black;
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 48px;
-  }
+	h2 {
+		font-size: 60px;
+		line-height: 1.1;
+		color: black;
+		text-align: center;
+		margin-top: 0;
+		margin-bottom: 48px;
+	}
 }
 
-
 select {
-    border: none;
-    font-weight: bold;
-    text-decoration: underline;
-    color: #6951FF;
+	border: none;
+	font-weight: bold;
+	text-decoration: underline;
+	color: #6951ff;
 }
 
 .app {
-    width: 100%;
-  height: 100%;
-  display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
 }
 
 .appBody {
-    max-width: 620px;
-    margin: 0 auto;
-    padding: 2em;
+	max-width: 620px;
+	margin: 0 auto;
+	padding: 2em;
 }
 
 .footer {
-    p {
-        font-size: 24px;
-        line-height: 1.5;
-        color: #6951FF;
-        font-weight: 500;
-        text-align: center;
-        margin: 0;
-    }
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
+	p {
+		font-size: 24px;
+		line-height: 1.5;
+		color: #6951ff;
+		font-weight: 500;
+		text-align: center;
+		margin: 0;
+	}
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
 
-    align-items: flex-end;
-    justify-content: center;
-    gap: 25px;
-    margin-bottom: 10px;
-  @media(min-width: 748px) {
-    align-items: flex-end;
-    justify-content: flex-end;
-    margin-right: 25px;
-  }
-
+	align-items: flex-end;
+	justify-content: center;
+	gap: 25px;
+	margin-bottom: 10px;
+	@media (min-width: 748px) {
+		align-items: flex-end;
+		justify-content: flex-end;
+		margin-right: 25px;
+	}
 }
