--- a/src/Spinner.module.scss
+++ b/src/Spinner.module.scss
@@ -1,42 +1,42 @@
 .loader {
-    width: 48px;
-    height: 48px;
-    display: block;
-    margin:15px auto;
-    position: relative;
-    color: #FFF;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
+	width: 48px;
+	height: 48px;
+	display: block;
+	margin: 15px auto;
+	position: relative;
+	color: #fff;
+	box-sizing: border-box;
+	animation: rotation 1s linear infinite;
 }
 .loader::after,
 .loader::before {
-    content: '';
-    box-sizing: border-box;
-    position: absolute;
-    width: 24px;
-    height: 24px;
-    top: 50%;
-    left: 50%;
-    transform: scale(0.5) translate(0, 0);
-    background-color: #6951FF;
-    border-radius: 50%;
-    animation: animloader 1s infinite ease-in-out;
+	content: "";
+	box-sizing: border-box;
+	position: absolute;
+	width: 24px;
+	height: 24px;
+	top: 50%;
+	left: 50%;
+	transform: scale(0.5) translate(0, 0);
+	background-color: #6951ff;
+	border-radius: 50%;
+	animation: animloader 1s infinite ease-in-out;
 }
 .loader::before {
-    background-color: #FF3D00;
-    transform: scale(0.5) translate(-48px, -48px);
+	background-color: #ff3d00;
+	transform: scale(0.5) translate(-48px, -48px);
 }
 
 @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
 @keyframes animloader {
-    50% {
-        transform: scale(1) translate(-50%, -50%);
-    }
+	50% {
+		transform: scale(1) translate(-50%, -50%);
+	}
 }
