--- a/src/index.scss
+++ b/src/index.scss
@@ -2,10 +2,9 @@
 
 @import "normalize.css";
 
-
-
 :root {
-	font-family: Source Sans Pro, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: Source Sans Pro, Inter, system-ui, Avenir, Helvetica, Arial,
+		sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
 	color: black;
